--- a/src/config
+++ b/src/config
@@ -1,7 +1,7 @@
-DATASET_PATH = /drive/seagate1T/small_renamed_cropped
-LOG_PATH = /home/mathieu/Universite/Maitrise/bark_classifier/log/
+DATASET_PATH = ../dataset/
+LOG_PATH = ../log/
 
-N_EPOCHS = 100
+N_EPOCHS = 10
 BATCH_SIZE = 64
 LR = 0.0001
 WEIGHT_DECAY = 0.0001
